add paragraphs to index

--- a/css/styles.css
+++ b/css/styles.css
@@ -4,13 +4,24 @@ ul{
     padding: 0;
     display: block;
     position: sticky,fixed bottom;
-
 }
 li{
 float: left;
 padding: 2rem;
-
 }
 html{
     scroll-behavior: smooth;
+}
+h1{
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 3rem;
+}  
+p{
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+.order{
+    text-align: center;
+}
+.title{
+    font-size: 1.5rem;
 }
