--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,8 @@
+body{
+    margin: 0;
+}
+
+
 ul{
     margin: 0;
     list-style-type: none;
@@ -6,7 +11,7 @@ ul{
     position: sticky,fixed bottom;
 }
 li{
-float: left;
+float:left;
 padding: 2rem;
 }
 html{
