--- a/css/styles.css
+++ b/css/styles.css
@@ -1,53 +1,93 @@
-body{
+body {
     margin: 0;
 }
-.background{
-background-size: cover;
+
+.navbar {
+    text-align: center;
 }
-ul{
+
+#img1 {
+    background-size: 100% 100%;
+    width: 100%;
+    height: 650px;
+}
+
+.piz {
+    text-align: center;
+    font-weight: bolder;
+    font-size: 2em;
+}
+
+ul {
     margin: 0;
     list-style-type: none;
     padding: 0;
     display: block;
-    position: sticky,fixed bottom;
+    position: sticky, fixed bottom;
 }
-li{
-float:left;
-padding: 2rem;
+
+li {
+    float: left;
+    padding: 2rem;
 }
-html{
+
+h3 {
+    font-size: 2em;
+}
+
+html {
     scroll-behavior: smooth;
 }
-.back{
+
+.back {
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
 }
-h1{
+
+h1 {
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-size: 3rem;
     text-align: center;
 }
-p{
+
+p {
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
-.order{
+
+.order {
     text-align: center;
 }
-.title{
+
+.title {
     font-size: 1.5rem;
 }
-.contact{
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; 
+
+.contact {
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     text-align: center;
     line-height: 1.5em;
 }
-.card{
-    box-shadow:  0 4px 8px 0 ;
+
+.card {
+    box-shadow: 0 4px 8px 0;
 }
-h3{
+
+h3 {
     text-align: center;
 }
-.checkout{
+
+.checkout {
     text-align: center;
+}
+
+#contact {
+    background-color: tan
+}
+
+#Order {
+    text-align: center;
+    font-size: 2em;
+    font-weight: bold;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
